--- a/css/index.css
+++ b/css/index.css
@@ -53,3 +53,45 @@ a {
 a span{
     color: #ff6f00;
 }
+.content-heading span{
+    color: #ff6f00;
+}
+
+.btn{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 370px;
+  height: 65px;
+  background: #ff6f00;
+  border: none;
+  border-radius: 5px;
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  color: #ffffff;
+  cursor: pointer;
+}
+.btn img {
+  height: 30px;
+}
+.content-heading {
+  margin: 3rem 0;
+  font-family: "Libre Baskerville", serif;
+  font-size: 36px;
+}
+.gender-select {
+  width: 80%;
+  padding-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+}
+.gender-select input {
+  height: 1rem;
+  width: 1rem;
+  margin-right: 0.3rem;
+  cursor: pointer;
+}
