--- a/css/index.css
+++ b/css/index.css
@@ -76,7 +76,9 @@ a span{
     justify-content: space-around;
     align-items: center;
     background: rgb(10, 97, 97);
-    color: #000;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+    color: #fff;
     width: 370px;
     height: 65px;
 }
