--- a/css/index.css
+++ b/css/index.css
@@ -26,8 +26,8 @@ a {
 }
 .main {
   display: flex;
-  justify-content: end;
-  padding: 0 3rem 0 8rem;
+  justify-content: center;
+  padding: 0 2rem 0 6rem;
 }
 .heading {
   font-family: "Libre Baskerville", serif;
@@ -130,4 +130,7 @@ a span{
 }
 #display:hover{
     columns: #ffffff;
+}
+.image{
+    size: 20px;
 }
